2009-05-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs:
	* System.Windows.Controls/ControlTest.cs: Add some more tests
	  to check when the template is applied for Controls.

2009-05-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: Move the
	  ConcreteControl class outside of ControlTest so that it can
	  be loaded through xaml.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ResourceDictionaryTest.cs: If 'Key' hasn't
	  been set, use 'Name'. Allows elements to be added to
	  ResourceDictionarys in managed land.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ResourceDictionaryTest.cs: Add a test which
	  tries to add data to ListBox.Resources through xaml

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Put in some error
	  handling for TemplateBinding failures when using
	  incompatible types.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: When a templatebinding
	  is attached to ContentControl.Content, we need to ensure
	  that the ContentControl is set to non-parenting mode.

2009-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/AssemblyPartTest.cs: Add more test cases
	wrt validations when loading assemblies.

2009-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Added another
	  nullable bool test.

	* System.Windows.Controls/RadioButtonTest.cs:
	* System.Windows.Controls.Primitives/ToggleButtonTest.cs:
	  Added ToString tests.

	* moon-unit.mdp: Updated.

2009-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.Browser/ScriptableTest.cs: Try all ignored
	  scriptable objects test on the bots.

2009-05-01  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/MiscParsing.cs: New test for escaping attributes
	with '{}'.

2009-05-01  Alan McGovern  <amcgovern@novell.com>
